# Magic8Ball

./: Cargo.toml  LICENSE  README.md  Readme.md
src/: main.rs
